# pihole-exporter

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
grafana/: pihole.json
src/pihole_exporter/: client.py  config.py  exceptions.py  logger.py  main.py  metrics.py  models.py
tests/: test_main.py
