[project]
name = "pihole-exporter"
version = "0.1.1"
description = ""
authors = [
    {name = "noobExtendsBot",email = "hackerearth02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
]

[project.scripts]
pihole-exporter = "pihole_exporter.main:main"

[tool.poetry]
packages = [{include = "pihole_exporter", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
